# lib-pool

./: CMakeLists.txt
inc/: pool.h
src/: CMakeLists.txt  pool.c
tests/: CMakeLists.txt  main.c
